[package]
name = "hyperbevy"
version = "0.1.0"
authors = ["Cameron Gorrie <sastraxi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "f6fc76db1da0fa9c6dc67f7b3f0c288904f0eec9" }
